--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,14 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Mona+Sans:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 @import "tailwindcss";
 
 @import "tw-animate-css";
+.hiden-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: var(--color-border) transparent;
+}
+
 
 @custom-variant dark (&:is(.dark *));
 
 
 @theme inline {
   --font-MonaSans: "Mona+Sans", "sans-serif"; 
+  --font-Roboto: "Roboto", "sans-serif";
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
